--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>QRコード生成</title>
-    <input type="number" id="namenum">
-    <button onclick="generateQR()">ClickPLZ</button>
+    <input type="text" name="name" id="namenum">
+    <button onclick="generateQR()">ClickPLZ</button><br>
+    <a href="read.html">QRコード読み込み</a>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
 <script>
