--- a/read.html
+++ b/read.html
@@ -1,1 +1,16 @@
-<h1>NOWEDIT</h1>
+<html>
+    <meta charset="utf-8">
+<head>
+	<meta charset="UTF-8">
+    <title>QRコード読み込み</title>
+    <script src="./jsQR.js" defer></script>
+    <script src="./main.js" defer></script>
+</head>
+<body>
+    <h1>jsQR</h1>
+    <div id="wrapper">
+        <div id="msg">Unable to access video stream.</div>
+        <canvas id="canvas"></canvas>
+    </div>
+</body>
+</html>
