--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <html>
     <meta charset="utf-8">
 <head>
+    <script src="./jsQR.js"></script>
+    <script src="./main.js" defer></script>
+    <script src="./qrgenerate.js" defer></script>
 	<meta charset="UTF-8">
-	<title>QRコード生成</title>
+	<title>QRコード</title>
+    <h1>QRコード生成</h1>
     <input type="text" name="name" id="namenum">
-    <button onclick="generateQR()">ClickPLZ</button><br>
-    <button type="button" onclick="location.href='read.html'">QRコード読み込みはこちら</button>
+    <button onclick="generateQR()">ClickPLZ</button>
+    <br>
+    <h1>QRコード読み込み</h1>
+    <div id="wrapper">
+        <div id="msg">Unable to access video stream.</div>
+        <canvas id="canvas"></canvas>
+    </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
-<script>
-    function generateQR() {
-        var qrtext = namenum.value;
-        var utf8qrtext = unescape(encodeURIComponent(qrtext));
-        $("#img-qr").html("");
-        $("#img-qr").qrcode({text:utf8qrtext});
-    };
-    </script>
 </head>
 <body>
 <div id="img-qr"></div>
