--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
+<script src="./jsQR.js"></script>
 <script>
     function generateQR() {
         var qrtext = namenum.value;
@@ -79,6 +80,6 @@
         }
         requestAnimationFrame(tick);
     }
-  </script>
+    </script>
 </head>
 </html>
