--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="./favicon.png" href="favicon.png" />
 	<title>QRコード</title>
     <h1>QRコード生成</h1>
     <input type="text" name="name" id="namenum">
