--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <input type="text" name="name" id="namenum">
     <button onclick="generateQR()">ClickPLZ</button>
     <h1>                                                </h1>
+    <h2>QRコード読み込み</h2>
     <div id="img-qr"></div>
     <div id="loadingMessage">Now loading Please allow the camera to read the QR code</div>
     <canvas id="canvas" hidden></canvas>
@@ -51,7 +52,7 @@
             video.play();
             requestAnimationFrame(tick);
         });
-
+3
         function tick() {
             loadingMessage.innerText = "Loading video..."
         if (video.readyState === video.HAVE_ENOUGH_DATA) {
