--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
-	<title>QRコード</title>
-    <h1>QRコード生成</h1>
+	<title>QRcode generator</title>
+    <h1>QRcode generator</h1>
     <input type="text" name="name" id="namenum">
     <button onclick="generateQR()">ClickPLZ</button>
     <h1>                                                </h1>
